tests/files/lexer_tests/should_fail/020.cmdr
// Illegal character in string (ascii 20)
var = ''